<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:id="@+id/rv_row_song_parent">

    <ImageView
        android:id="@+id/rv_row_song_image"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:padding="8dp"
        android:src="@drawable/ic_music_song"
        android:contentDescription="@string/song_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rv_row_song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/song_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rv_row_song_duration_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/artists"
            android:textSize="12sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/rv_row_add_to_playlist"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:padding="6dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_add_to_playlist"
        android:contentDescription="@string/add_to_playlist" />

</LinearLayout>