<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/play_now_group_view"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_now_playing_song"
        android:layout_width="@dimen/ic_play_song_dimen"
        android:layout_height="@dimen/ic_play_song_dimen"
        android:layout_marginStart="@dimen/ic_play_song_margin"
        android:contentDescription="@string/song_image"
        android:src="@drawable/ic_music_song" />

    <TextView
        android:id="@+id/tv_now_playing_song"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ic_play_song_margin"
        android:layout_weight="1"
        android:text="@string/song_title"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/ib_play_song"
        android:layout_width="@dimen/ic_play_song_dimen"
        android:layout_height="@dimen/ic_play_song_dimen"
        android:layout_marginEnd="@dimen/ic_play_song_margin"
        android:contentDescription="@string/play_song"
        android:src="@drawable/ic_play_music" />
</LinearLayout>