<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".NowPlayingActivity">

    <include
        layout="@layout/navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ic_play_song_margin" />

    <ImageView
        android:id="@+id/now_playing_song_image"
        android:layout_width="@dimen/NowPlayingSongImage"
        android:layout_height="@dimen/NowPlayingSongImage"
        android:scaleType="center"
        android:contentDescription="@string/song_image"
        android:src="@drawable/ic_queue_music" />


        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="@dimen/SeekBar_height"
            android:layout_marginTop="@dimen/SeekBar_margin"
            android:layout_marginBottom="@dimen/SeekBar_margin"
            />

        <LinearLayout
            android:id="@+id/play_now_group_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/navigation_menu_color"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/ic_now_playing_song"
                android:layout_width="@dimen/ic_play_song_dimen"
                android:layout_height="@dimen/ic_play_song_dimen"
                android:src="@drawable/ic_music_song"
                android:contentDescription="@string/song_image" />
            <TextView
                android:id="@+id/tv_now_playing_song"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/song_title"
                android:layout_weight="1"
                android:textSize="14sp"/>
            <ImageButton
                android:id="@+id/ib_fast_rewind"
                android:layout_width="@dimen/ic_play_song_dimen"
                android:layout_height="@dimen/ic_play_song_dimen"
                android:src="@drawable/ic_fast_rewind"
                android:contentDescription="@string/fast_rewind" />
            <ImageButton
                android:id="@+id/ib_play_song"
                android:layout_width="@dimen/ic_play_song_dimen"
                android:layout_height="@dimen/ic_play_song_dimen"
                android:src="@drawable/ic_play_music"
                android:contentDescription="@string/play_song" />
            <ImageButton
                android:id="@+id/ib_fast_forward"
                android:layout_width="@dimen/ic_play_song_dimen"
                android:layout_height="@dimen/ic_play_song_dimen"
                android:src="@drawable/ic_fast_forward"
                android:contentDescription="@string/fast_forward" />
        </LinearLayout>

</LinearLayout>